TEST_PROGRAMS/INVALID/cheuk_siow/invalid2.min
# Invalid program 2: invalid type declaration.

var s: sentence;
s = "Variable s of sentence type";
print s;

